[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/materials/fonts/pixel-big-theme.tres" type="Theme" id=1]
[ext_resource path="res://objects/interface/ItemIcon.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/scripts/interface/inventory/InventoryMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/materials/fonts/pixel-theme.tres" type="Theme" id=4]

[sub_resource type="Animation" id=2]
resource_name = "hide"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("back:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("back:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 279, 80 ), Vector2( 279, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("back:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 558, 446 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "show"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("back:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("back:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 279, 0 ), Vector2( 279, 80 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("back:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 558, 446 ) ]
}

[node name="Inventory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="back" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 279.0
margin_top = 80.0
margin_right = -187.0
margin_bottom = -74.0
color = Color( 0.180392, 0.180392, 0.180392, 0.588235 )

[node name="back2" type="ColorRect" parent="back"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 10.0
margin_bottom = 12.0
color = Color( 0.137255, 0.137255, 0.137255, 0.635294 )

[node name="Header" type="Label" parent="back/back2"]
anchor_right = 1.0
margin_bottom = 37.0
theme = ExtResource( 1 )
text = "Инвентарь"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="back/back2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 45.0
margin_right = -18.0
margin_bottom = -145.0
columns = 6

[node name="ItemIcon" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_right = 86.0
margin_bottom = 87.0
item_code = "flashlight"

[node name="ItemIcon2" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_left = 90.0
margin_right = 176.0
margin_bottom = 87.0
item_code = "navigator"

[node name="ItemIcon3" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_left = 180.0
margin_right = 266.0
margin_bottom = 87.0

[node name="ItemIcon4" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_left = 270.0
margin_right = 356.0
margin_bottom = 87.0

[node name="ItemIcon5" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_left = 360.0
margin_right = 446.0
margin_bottom = 87.0

[node name="ItemIcon6" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_left = 450.0
margin_right = 535.0
margin_bottom = 87.0

[node name="ItemIcon7" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_top = 91.0
margin_right = 86.0
margin_bottom = 178.0

[node name="ItemIcon8" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_left = 90.0
margin_top = 91.0
margin_right = 176.0
margin_bottom = 178.0

[node name="ItemIcon9" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_left = 180.0
margin_top = 91.0
margin_right = 266.0
margin_bottom = 178.0

[node name="ItemIcon10" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_left = 270.0
margin_top = 91.0
margin_right = 356.0
margin_bottom = 178.0

[node name="ItemIcon11" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_left = 360.0
margin_top = 91.0
margin_right = 446.0
margin_bottom = 178.0

[node name="ItemIcon12" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_left = 450.0
margin_top = 91.0
margin_right = 535.0
margin_bottom = 178.0

[node name="ItemIcon13" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_top = 182.0
margin_right = 86.0
margin_bottom = 268.0

[node name="ItemIcon14" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_left = 90.0
margin_top = 182.0
margin_right = 176.0
margin_bottom = 268.0

[node name="ItemIcon15" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_left = 180.0
margin_top = 182.0
margin_right = 266.0
margin_bottom = 268.0

[node name="ItemIcon16" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_left = 270.0
margin_top = 182.0
margin_right = 356.0
margin_bottom = 268.0

[node name="ItemIcon17" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_left = 360.0
margin_top = 182.0
margin_right = 446.0
margin_bottom = 268.0

[node name="ItemIcon18" parent="back/back2/GridContainer" instance=ExtResource( 2 )]
margin_left = 450.0
margin_top = 182.0
margin_right = 535.0
margin_bottom = 268.0

[node name="ItemHeader" type="Label" parent="back/back2"]
anchor_top = 0.712
anchor_bottom = 1.0
margin_left = 17.0
margin_top = -0.0960083
margin_right = 415.0
margin_bottom = -115.0
theme = ExtResource( 1 )
clip_text = true

[node name="ItemDesc" type="Label" parent="back/back2"]
anchor_top = 0.712
anchor_bottom = 1.0
margin_left = 18.0
margin_top = 31.904
margin_right = 546.0
margin_bottom = -25.0
theme = ExtResource( 4 )
autowrap = true
clip_text = true

[node name="anim" type="AnimationPlayer" parent="."]
anims/hide = SubResource( 2 )
anims/show = SubResource( 3 )
